[Android] ArrayList is faster than LinkedList for reasonable N.